--- a/hobby.html
+++ b/hobby.html
@@ -56,7 +56,10 @@
     。支付宝界面过于繁琐，密集恐惧症看了直呼受不了；另外支付宝红点是我用过软件中最多的，老是各种投资、广告、理财之类的，非常讨厌！每次打开都有几十条未读消息😅.又不是什么关键信息，关闭还很麻烦，给我把开关藏那么深……对于QQ，自从他把<span
         class="jiacu">虚幻引擎4</span>（Unreal Engine
     4,著名的游戏引擎，由Epic开发，简称UE4）放进来，我就感觉它要完蛋了。一个好好的IM即时通讯软件，加入一些”臃肿“的功能，反而失去了它的初心，越来越玩不懂了。不仅占用更多的磁盘空间，使用时内存占用也上来了，为了聊个天手机的资源莫名其妙地被吃光……才谈谈UE4，UE4开发出了不少知名电子游戏，非常火爆的吃鸡（PUBG）、方舟：生存进化、盗贼之海、极限竞速：地平线4、最终幻想7重制版都是UE4打造出来的，而我们的QQ用UE4来做QQ秀，我都感叹原来某讯还记得有QQ秀这东西，用UE4打包好强行塞给用户，除非你拒绝版本更新……真的是一言难尽，只能说中国软件还需要成长吧。用户需要的是<span
-        class="jiacu">做的精，而不是做的广的软件</span>。好好优化一项功能，而不是为了追求多而肆意开发多功能，陷入自我满足的漩涡。
+        class="jiacu">做的精，而不是做的广的软件</span>。好好优化一项功能，而不是为了追求多而肆意开发多功能，陷入自我满足的漩涡。<br>
+    操作系统也是一门大学问，整个计算机的硬件资源啊，软件资源都由它来管。Windows的市场后占有率极高，所以针对win的勒索病毒也要多一些，win只由微软内部进行维护，所以安全性还不够。对于Mac
+    OS，其实保留了unix的优点，属于类unix系统，系统整体性还是流畅好用，与其他苹果产品放在一起的话，数据传输，协同是最大的优势。所以我一直认为苹果公司是一家实力极强的软件公司，买那么多电子产品只是为了推广自己的软件，那就是操作系统。从手机到平板到手表到电脑甚至到电视机都拥有自己的系统，无疑给公司带来了巨大的竞争力，也是苹果能领先于同行的关键因素之一。由此可见软件的核心竞争力之大。苹果也比较有眼光，很早就资助了LLVM项目，这个项目与底层编译有关的，具体我也看不懂也不理解，比较高深😂.在GitHub上也可以看到。感兴趣的同学们可以了解一下。不仅如此苹果自己也开发了一门高级语言：swift。现在广泛运用于自家操作系统和自带软件。今年苹果的WWDC2022全球开发者大会，已经放出了消息，从6月7日开始，很期待苹果能在软件上做出哪些长足进步。比如我最想要的NFC门禁、iPad
+    OS版的Xcode（这意味着可以在iPad上编程了）
 </p>
 <span class="yiji">📚书籍：</span><br>
 <p>
