--- a/experience.html
+++ b/experience.html
@@ -46,7 +46,12 @@
     <img src="images/showvsc.png" alt="vscode" width="100%">
     <span class="jiacu">最智能的Java开发工具：</span>
     <img src="images/ijshow.png" alt="IDEA" width="100%"><br>
-    IDE最好用的地方莫过于快捷键、语法高亮、智能代码补全等等功能，希望大家都能找到最适合自己的开发工具！
+    IDE最好用的地方莫过于快捷键、语法高亮、智能代码补全等等功能，希望大家都能找到最适合自己的开发工具！<br>
+    4️⃣<span class="jiacu">找到优质学习网站</span><br>
+    1.B站，可以看很多课程的视频，也可以拿来放松看鬼畜视频。<br>
+    2.GitHub，在这里可以看到世界上最牛的程序员写的代码，同时也可以帮你进行源代码管理。<br>
+    3.刷题网站，力扣、洛谷等
+    ……
 </p>
 <a href="about.html">
     <div class="container">
