--- a/hobby.html
+++ b/hobby.html
@@ -79,7 +79,7 @@
     </div>
     <div>
         <p>
-            由日本任天堂开发，它是我玩过的第二份开放世界类型的游戏，我只想用一句话评价它：<span class="jiacu">天下第一的游戏很多，但旷野之息是”天“。</span><br>
+            由日本任天堂开发，它是我玩过的第二份开放世界类型的游戏。该作让一蹶不振的任天堂重回巅峰，也为switch主机销量破亿奠定了基础。我只想用一句话评价它：<span class="jiacu">天下第一的游戏很多，但旷野之息是”天“。</span><br>
             1️⃣无感的引导机制。单单是游戏地图界面，无比清爽，不像其他泯然众人的开放世界满图问号。任天堂通过强大的潜在引导力趋势着 玩家积极探索世界，你总会发现：这地方也用新东西?<br>
             2️⃣地图交互。得益于出色的 物理引擎和化学引擎，光照烘培仿佛身处真实世界，各种物理规律也会严格遵守(本游戏中 需要大量运用动量定理)来完成游戏目标。<br>
             3️⃣非线性关卡设计堪称游戏任务设计的天花板。 像完成哪个任务完全取决于你，而且逻辑自洽，相比于其他开放世界游戏的线性剧情， 这才叫是开放。<br>
@@ -97,7 +97,7 @@
     </div>
     <div>
         <p>
-            讲述了一位西部牛仔亚瑟·摩根的救赎之路，那时候肺结核是绝症。由美国R星开发。<br>
+            1899年的美国，变得越来越法制。一位西部牛仔亚瑟·摩根的救赎之路由此开始。该作品传言由美国R星耗时8年，豪掷8亿美金打造。<br>
             “Mr. Morgan,
             无论你以前做过什么，可是每当你出现，你总是笑容洋溢，帮助着别人，这才是我眼中的你。——游戏中的某位修女对主角的评价”很难想象摩根先生这么一位坏事做尽的亡命之徒会获得这样的评价。RDR2是我玩过最残酷的游戏，倒不是说因为是一个主角必死的结局，而是我需要眼睁睁的看着一个无比熟悉亲切的人渐渐步入死亡的笼罩，可无能为力。无论你做什么，亚瑟都会一天比一天更辛苦，无从挽留，这是我在任何游戏都从来没有过的体会。游戏里面没有刻意的去渲染亚瑟的病痛，隐忍的亚瑟也对自己的肺结核只字不提。
             但是从第五章开始，看完医生后我我想给亚瑟买一件舒服点的衣服，亚瑟充血的双眼，紫青的双颊，让你知道再也回不去了。泡澡的时候，他呼吸困难，胸部明显的起伏，脸上伴随着强忍的痛楚，我很难想象他患病的每一天是要用多大的魄力去忍耐的，然而每一天，我们的亚瑟都做了很多，为帮派，为别人，却从来没为自己做过什么。Red
