--- a/theweb.html
+++ b/theweb.html
@@ -46,7 +46,7 @@
 <p>
     这学期的网页制作学习，就如杨老师所说，帮我们开启程序设计的大门，让我们亲自动手使用计算机进行开发。但是我一直认为网页设计其实并不算严格意义上的程序设计，网页设计注重美观的外表，与之相对的后端开发注重计算思维、数理逻辑，核心观念在于解决生活中人类难以解决的复杂问题。我们C程序设计的李老师曾经也在课堂发表过类似的声明。当然前端后端是没有鄙视链关系的，前端工程师和后端工程师都是非常抢手的人才，能将其中任何一个做好都是名副其实的大牛！<br>
     课堂上的知识其实远远不够的，可能大多时候没有学懂，就需要课后拓展知识。我认为选择一个得心应手的开发工具是很重要的。DW封装了很多高级功能，但是我们没有认真学习过高级功能，直接运用可能会出现小毛病，出现后可能不知道问题出在哪里，这就需要好好反思，是不是自己想要的太难了，还是自己的基础知识不牢固，亦或者不是自己的问题而是DW版本造成的不兼容的问题。我们授课使用的DW
-    CS6其实已经跟不上时代了，从它自动生成的代码就可以看出，仍在使用旧特性，而旧特性已经被W3C废除了。我认为对新时代大学生的学习是不利的，我们应该主动地获取新知识。设计的思想不会变，但设计的技术会变，所以有必要学习最新的技术。基于以上因素我在开始期末作业之前就在寻找现代化开发工具，之前准备使用vscode进行开发，但考虑到vscode可能无法实现网站的发布（可能有相关插件支持），所以我就考虑了Webstorm
+    CS6其实已经跟不上时代了，从它自动生成的代码就可以看出，仍在使用旧特性，而旧特性已经被W3C废除了。我认为对新时代大学生的学习是不利的，我们应该主动地获取新知识。设计的思想不会变，但设计的技术会变，所以有必要学习最新的技术。基于以上因素我在开始期末作业之前就在寻找现代化开发工具，之前准备使用vscode进行开发，但考虑到vscode实现网站的发布相对麻烦，因开发周期短的限制我就考虑了Webstorm
     2022，刚好我早期进行后端语言学习的时候，通过了Jetbrains公司的学生认证，拿到了教育许可证，就顺理成章地使用了Webstorm，使用体验很棒，也支持连接FTP服务器并上传自己的网站，又帮我省了下载其他绿化软件的时间。<span
         class="jiacu">当然选择最适合自己就没问题！</span><br>
     该站开发启动日是4月25日下午16:27.哈哈哈,这都是Git版本控制中记录下来的数据，每天都可以看到自己的开发进程,耗时共计11天.这次网站设计开发也是让我第一次接触到VCS版本控制系统的使用，对未来开发也有一定的帮助！感谢网页制作！<br>
