--- a/theweb.html
+++ b/theweb.html
@@ -12,7 +12,7 @@
 <p>我的第一年大学</p>
 <h2>🔷网站风格与设计理念</h2>
 <p>
-    网站风格以简介、大方为主，设置了短小精悍的特效，都是我课后学习，熟练掌握的。对于高级特效，我并未系统性学习，所以<span class="jiacu">整个网站并未使用JavaScript进行开发</span> 。<br>
+    网站风格以简洁、大方为主，设置了短小精悍的特效，都是我课后学习，熟练掌握的。对于高级特效，我并未系统性学习，所以<span class="jiacu">整个网站并未使用JavaScript进行开发</span> 。<br>
     网站设计理念：华丽的特效千篇一律，有趣的内容万里挑一。本站开发过程中一直秉持着内容>特效的设计理念。期末作业网站使用的特效可能会有相同的，但是内容绝对是每个人在过去一年中的所见所得，就像软件是硬件的灵魂，内容也就是网页的灵魂，绝非是特效。<br>
     该站的源代码全部都由本人手写，主要是对开发过程中的频繁修改进行了考量，我认为手写代码出现问题可以迅速找出问题，针对性修改，增、删、改、查都由自己掌控，更加灵活。
 </p>
