--- a/afterclass.html
+++ b/afterclass.html
@@ -5,6 +5,7 @@
     <title>课后</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
     <link rel="stylesheet" href="css_sheet/afclass.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <ul>
