--- a/ans.html
+++ b/ans.html
@@ -48,6 +48,7 @@
             transition: all .3s;
         }
     </style>
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <h1>解析与答案</h1>
