--- a/experience.html
+++ b/experience.html
@@ -5,6 +5,7 @@
     <title>心得</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
     <link rel="stylesheet" href="css_sheet/exper.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <ul>
