--- a/hobby.html
+++ b/hobby.html
@@ -5,6 +5,7 @@
     <title>业余爱好</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
     <link rel="stylesheet" href="css_sheet/hobby.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <ul>
