--- a/junjie.html
+++ b/junjie.html
@@ -5,6 +5,7 @@
     <title>关于我</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
     <link rel="stylesheet" href="css_sheet/junjie.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <ul>
