--- a/learn.html
+++ b/learn.html
@@ -5,6 +5,7 @@
     <title>学习情况</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
     <link rel="stylesheet" href="css_sheet/learn.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <ul>
