--- a/myinformation.html
+++ b/myinformation.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css_sheet/pointer.css">
     <link rel="stylesheet" href="css_sheet/myinfor.css">
     <link rel="stylesheet" href="https://libs.baidu.com/fontawesome/4.0.3/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <ul>
