--- a/theweb.html
+++ b/theweb.html
@@ -5,6 +5,7 @@
     <title>关于此网站</title>
     <link rel="stylesheet" href="css_sheet/hobby.css">
     <link rel="stylesheet" href="css_sheet/food.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <div class="align"><h1>『网站概述』</h1></div>
