--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <title>关于</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
     <link rel="stylesheet" href="css_sheet/abo.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <div class="container">
