--- a/food.html
+++ b/food.html
@@ -5,6 +5,7 @@
     <title>食物</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
     <link rel="stylesheet" href="css_sheet/hobby.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <ul>
