--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Greetings!</title>
     <link rel="stylesheet" href="css_sheet/ind.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <div id="container">
