--- a/lastyear.html
+++ b/lastyear.html
@@ -5,6 +5,7 @@
     <title>过去的一年</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
     <link rel="stylesheet" href="css_sheet/lastyear.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <ul>
